--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: aquasentinel-backend
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
     plan: free
     envVars:
       - key: FLASK_ENV
