--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.3.3
-flask-cors==4.0.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-firebase-admin==6.9.0
-asyncio
-python-dotenv==1.0.0 
+flask>=2.3.0,<3.0.0
+flask-cors>=4.0.0
+pandas>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+scikit-learn>=1.3.0,<2.0.0
+joblib>=1.3.0
+firebase-admin>=6.0.0
+python-dotenv>=1.0.0
+gunicorn>=21.0.0 
