--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: PORT
         value: 10000
       - key: CORS_ORIGINS
-        value: "https://your-frontend-url.netlify.app,http://localhost:3000"
+        value: "https://*.netlify.app,http://localhost:3000"
       - key: DATABASE_URL
         value: "sqlite:///aquasentinel.db"
       - key: MODEL_PATH
